# image-to-latex

./: LICENSE  README.md
backend/: .gitignore  imgtotext.py  main.py  prompt.txt  pyproject.toml  requirements.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: Footer.jsx  Header.jsx  HistoryCard.jsx  Middle.jsx
frontend/src/pages/: History.jsx  Home.jsx
