[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["M V Midhun <midhunmareedu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
motor = "^3.3.2"
uvicorn = "^0.25.0"
fastapi = "^0.108.0"
python-multipart = "^0.0.6"
google-generativeai = "^0.3.2"
python-dotenv = "^1.0.0"
pillow = "^10.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
my-script = "py main.py"